@@ -29,12 +29,18 @@
     <name>${project.artifactId}</name>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.hertzbeat</groupId>
+            <artifactId>hertzbeat-common-spring</artifactId>
+            <version>${hertzbeat.version}</version>
+        </dependency>
+
         <!-- collector-basic -->
         <dependency>
             <groupId>org.apache.hertzbeat</groupId>
@@ -142,8 +148,8 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
-                            <source>17</source>
-                            <target>17</target>
+                            <source>${java.version}</source>
+                            <target>${java.version}</target>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -216,8 +222,8 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
-                            <source>17</source>
-                            <target>17</target>
+                            <source>${java.version}</source>
+                            <target>${java.version}</target>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -343,6 +349,193 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>native</id>
+            <properties>
+                <native.image.name>hertzbeat-collector-collector</native.image.name>
+                <native.binary.extension></native.binary.extension>
+                <native.launcher.dir>../../script/assembly/collector/bin-native</native.launcher.dir>
+                <native.package.format>tar.gz</native.package.format>
+                <native.target.platform>unsupported</native.target.platform>
+                <native.package.id>${native.target.platform}-bin</native.package.id>
+                <native.package.baseDirectory>apache-hertzbeat-collector-native-${hzb.version}-${native.target.platform}-bin</native.package.baseDirectory>
+                <native.binary.source>target/${native.image.name}${native.binary.extension}</native.binary.source>
+                <native.executable.packageName>${project.build.finalName}${native.binary.extension}</native.executable.packageName>
+            </properties>
+            <build>
+                <finalName>apache-hertzbeat-collector-native-${hzb.version}</finalName>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <excludes>
+                            <exclude>META-INF/services/org.apache.hertzbeat.collector.collect.AbstractCollect</exclude>
+                        </excludes>
+                    </resource>
+                </resources>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <proc>full</proc>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <version>3.5.0</version>
+                        <executions>
+                            <execution>
+                                <id>require-supported-native-platform</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <requireProperty>
+                                            <property>native.target.platform</property>
+                                            <regex>^(linux-amd64|linux-arm64|macos-amd64|macos-arm64|windows-amd64)$</regex>
+                                            <message>Unsupported native collector platform. Build the native collector on a supported GitHub runner or matching local host: linux-amd64, linux-arm64, macos-amd64, macos-arm64, windows-amd64.</message>
+                                        </requireProperty>
+                                    </rules>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.11.4</version>
+                        <configuration>
+                            <imageName>${native.image.name}</imageName>
+                            <buildArgs>
+                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
+                                <buildArg>-H:-AddAllFileSystemProviders</buildArg>
+                                <buildArg>-H:ServiceLoaderFeatureExcludeServiceProviders=org.apache.sshd.common.file.root.RootedFileSystemProvider,org.apache.sshd.sftp.client.fs.SftpFileSystemProvider</buildArg>
+                                <buildArg>--initialize-at-build-time=net.i2p.crypto.eddsa.EdDSASecurityProvider,org.apache.arrow.memory.util.MemoryUtil</buildArg>
+                                <buildArg>-J--add-opens=java.base/java.nio=ALL-UNNAMED</buildArg>
+                                <buildArg>-J-Dorg.apache.sshd.security.registrars=org.apache.sshd.common.util.security.eddsa.EdDSASecurityProviderRegistrar</buildArg>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>${maven-assembly-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>native-bin</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <configuration>
+                                    <descriptors>
+                                        <descriptor>../../script/assembly/collector/assembly-native.xml</descriptor>
+                                    </descriptors>
+                                    <outputDirectory>../../dist</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>native-platform-linux-amd64</id>
+            <activation>
+                <os>
+                    <name>Linux</name>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <native.target.platform>linux-amd64</native.target.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>native-platform-linux-x86_64</id>
+            <activation>
+                <os>
+                    <name>Linux</name>
+                    <arch>x86_64</arch>
+                </os>
+            </activation>
+            <properties>
+                <native.target.platform>linux-amd64</native.target.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>native-platform-linux-arm64</id>
+            <activation>
+                <os>
+                    <name>Linux</name>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <properties>
+                <native.target.platform>linux-arm64</native.target.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>native-platform-macos-amd64</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                    <arch>x86_64</arch>
+                </os>
+            </activation>
+            <properties>
+                <native.target.platform>macos-amd64</native.target.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>native-platform-macos-arm64</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <properties>
+                <native.target.platform>macos-arm64</native.target.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>native-platform-windows-amd64</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <native.binary.extension>.exe</native.binary.extension>
+                <native.launcher.dir>../../script/assembly/collector/bin-native-win</native.launcher.dir>
+                <native.package.format>zip</native.package.format>
+                <native.target.platform>windows-amd64</native.target.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>native-platform-windows-x86_64</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                    <arch>x86_64</arch>
+                </os>
+            </activation>
+            <properties>
+                <native.binary.extension>.exe</native.binary.extension>
+                <native.launcher.dir>../../script/assembly/collector/bin-native-win</native.launcher.dir>
+                <native.package.format>zip</native.package.format>
+                <native.target.platform>windows-amd64</native.target.platform>
+            </properties>
         </profile>
     </profiles>
 </project>
